--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <option value="es">Spanish</option>
         <option value="fr">French</option>
         <option value="de">German</option>
+        <option value="hi">Hindi</option>
       </select>
       <label for="languageSelect">Language</label>
       <input type="checkbox" id="themeToggle">
