--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="_front.js"></script>
+    <script src="front.js"></script>
   </body>
 </html>
